--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
         />
         <link
             rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+            integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+            integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
             href="https://cdn.lineicons.com/4.0/lineicons.css"
         />
         <link rel="stylesheet" href="style.css" />
@@ -374,7 +388,7 @@
                         <i class="lni lni-graduation"></i>
                     </div>
                     <div class="expTopHeadTitle">
-                        <h1>My Experience</h1>
+                        <h1>My Education</h1>
                     </div>
                 </div>
                 <div class="expTiles">
@@ -468,9 +482,264 @@
                 </div>
                 <div class="skillSingleCard">
                     <div class="imgCon">
-                        <img src="images/skills/office.png" alt="" />
+                        <img src="images/skills/blender_logo.png" alt="" />
                     </div>
-                    <h3>Office</h3>
+                    <h3>Blender</h3>
+                </div>
+            </div>
+        </section>
+
+        <section id="testimonial">
+            <div class="sectionTopHeading">
+                <h1>My Client's Stories</h1>
+                <p>
+                    Empowering people in new a digital journey with my super
+                    services
+                </p>
+            </div>
+            <div class="testimonialCards">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://www.stuff.co.nz/media/images/9Tzi8ywRz924XE3uHaD6DS7nc5socMXiw3+FeqnKLTcKYzcjpC0loLmjWL67i6XenGz51ItKV+MhIro0oGDtK+WDlBrfHCL2wt%2Fdsq07koI=?resolution=620x350"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img
+                                        src="https://images.squarespace-cdn.com/content/v1/63d0a818fad8c1759df3782e/299f6918-e77b-421e-a0c6-b978a6de4cf3/+_Full+Logo+Dark+Peach.png"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Elon_Musk_Royal_Society.jpg/682px-Elon_Musk_Royal_Society.jpg"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Elon_Musk_Royal_Society.jpg/682px-Elon_Musk_Royal_Society.jpg"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://c.ndtvimg.com/gws/5615/assets/1.jpeg?1650980871"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://www.stuff.co.nz/media/images/9Tzi8ywRz924XE3uHaD6DS7nc5socMXiw3+FeqnKLTcKYzcjpC0loLmjWL67i6XenGz51ItKV+MhIro0oGDtK+WDlBrfHCL2wt%2Fdsq07koI=?resolution=620x350"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img
+                                        src="https://assets-global.website-files.com/6312535109af3402143e250c/6312535109af34b7653e2519_amazon_-%20logo-300x119.png"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://c.ndtvimg.com/gws/5615/assets/1.jpeg?1650980871"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://www.stuff.co.nz/media/images/9Tzi8ywRz924XE3uHaD6DS7nc5socMXiw3+FeqnKLTcKYzcjpC0loLmjWL67i6XenGz51ItKV+MhIro0oGDtK+WDlBrfHCL2wt%2Fdsq07koI=?resolution=620x350"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Elon_Musk_Royal_Society.jpg/682px-Elon_Musk_Royal_Society.jpg"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonialSingleCard">
+                            <div class="testimonialTopLogoPhoto">
+                                <div class="testimonialLogo">
+                                    <img src="images/logo.png" alt="" />
+                                </div>
+                                <div class="testimonialPhoto">
+                                    <img
+                                        src="https://c.ndtvimg.com/gws/5615/assets/1.jpeg?1650980871"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                            <div class="textPart">
+                                <img src="images/inverted-commas.png" alt="" />
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Doloribus vitae sunt nam
+                                    facilis, numquam dicta optio laboriosam.
+                                    Dolorem, neque praesentium!
+                                </p>
+                                <h3>Elon Musk</h3>
+                                <small>Founder of Tesla</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -483,6 +752,12 @@
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/odometer.min.js"
             integrity="sha512-v3fZyWIk7kh9yGNQZf1SnSjIxjAKsYbg6UQ+B+QxAZqJQLrN3jMjrdNwcxV6tis6S0s1xyVDZrDz9UoRLfRpWw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
