updating contact section

--- a/index.html
+++ b/index.html
@@ -744,6 +744,119 @@
             </div>
         </section>
 
+        <section id="contact">
+            <div class="contactFormInfo">
+                <div class="contactForm">
+                    <div class="contactFormTopTitle">
+                        <h1>Let’s work together!</h1>
+                        <p>
+                            I design and code beautifully simple things and i
+                            love what i do. Just simple like that!
+                        </p>
+                    </div>
+                    <div class="contactFormCon">
+                        <form id="contactForm">
+                            <div class="nameInput">
+                                <input
+                                    type="text"
+                                    name="firstName"
+                                    id="firstName"
+                                    placeholder="First name"
+                                    required
+                                />
+                                <input
+                                    type="text"
+                                    name="lastName"
+                                    id="lastName"
+                                    placeholder="Last name"
+                                />
+                                <input
+                                    type="email"
+                                    name="userEmail"
+                                    id="userEmail"
+                                    placeholder="Email address"
+                                    required
+                                />
+                                <input
+                                    type="tel"
+                                    name="userPhone"
+                                    id="userPhone"
+                                    placeholder="Phone number"
+                                    required
+                                />
+                            </div>
+                            <div class="catagoryAndMsg">
+                                <select name="catagory" id="catagory" required>
+                                    <option
+                                        selected
+                                        disabled
+                                        value="—Choose catagory—"
+                                    >
+                                        —Choose catagory—
+                                    </option>
+                                    <option value="Branding Design">
+                                        Branding Design
+                                    </option>
+                                    <option value="UI/UX Design">
+                                        UI/UX Design
+                                    </option>
+                                    <option value="Web Design & Dev">
+                                        Web Design & Dev
+                                    </option>
+                                    <option value="App Design & Dev">
+                                        App Design & Dev
+                                    </option>
+                                </select>
+                                <textarea
+                                    name="userMsg"
+                                    id="userMsg"
+                                    placeholder="Message"
+                                    required
+                                ></textarea>
+                            </div>
+                            <button type="submit">
+                                Send Message
+                                <i class="lni lni-angle-double-right"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="contactInfo">
+                    <div class="contactInfoTile">
+                        <div class="contactIcon">
+                            <i class="lni lni-phone"></i>
+                        </div>
+                        <div class="contactInfoText">
+                            <p>Phone</p>
+                            <a href="tel:+8801725307928">01725307928</a>
+                        </div>
+                    </div>
+                    <div class="contactInfoTile">
+                        <div class="contactIcon">
+                            <i class="lni lni-envelope"></i>
+                        </div>
+                        <div class="contactInfoText">
+                            <p>Mail</p>
+                            <a href="mailto:dev.alarafat@mail.com"
+                                >dev.alarafat@mail.com</a
+                            >
+                        </div>
+                    </div>
+                    <div class="contactInfoTile">
+                        <div class="contactIcon">
+                            <i class="lni lni-map-marker"></i>
+                        </div>
+                        <div class="contactInfoText">
+                            <p>Address</p>
+                            <a href="#"
+                                >16/3 North Manikdi, Dhaka Cantt, Dhaka-1206</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script
             src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
