--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
                             </div>
                             <div class="heroIcon">
                                 <a href="#">
+                                    <i class="lni lni-youtube"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
                                     <i class="lni lni-linkedin"></i>
                                 </a>
                             </div>
@@ -748,10 +753,10 @@
             <div class="contactFormInfo">
                 <div class="contactForm">
                     <div class="contactFormTopTitle">
-                        <h1>Let’s work together!</h1>
+                        <h1>Get In Touch!</h1>
                         <p>
-                            I design and code beautifully simple things and i
-                            love what i do. Just simple like that!
+                            Crafting beautiful simplicity through design and
+                            code. That's my passion.
                         </p>
                     </div>
                     <div class="contactFormCon">
@@ -837,8 +842,8 @@
                         </div>
                         <div class="contactInfoText">
                             <p>Mail</p>
-                            <a href="mailto:dev.alarafat@mail.com"
-                                >dev.alarafat@mail.com</a
+                            <a href="mailto:dev.alarafat@gmail.com"
+                                >dev.alarafat@gmail.com</a
                             >
                         </div>
                     </div>
@@ -848,12 +853,100 @@
                         </div>
                         <div class="contactInfoText">
                             <p>Address</p>
-                            <a href="#"
+                            <a
+                                target="_blank"
+                                href="https://maps.app.goo.gl/4x52Htm3hDntknqr9"
                                 >16/3 North Manikdi, Dhaka Cantt, Dhaka-1206</a
                             >
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="footer">
+            <div class="footerTop">
+                <div class="footerLogo">
+                    <img src="images/logo.png" alt="" />
+                    <h3>dev.arafat</h3>
+                </div>
+                <div class="footerTopRight">
+                    <div class="subscribeEmail">
+                        <form action="#" id="footerEmailSub">
+                            <input
+                                type="email"
+                                name="subEmail"
+                                id="subEmail"
+                                placeholder="Your Email"
+                                required
+                            />
+                            <button type="submit">Subscribe Now!</button>
+                        </form>
+                    </div>
+                    <div class="navMenu">
+                        <ul>
+                            <li class="navMenuLi">
+                                <a href="#services">Services</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#works">Works</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#resume">Resume</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#skills">Skills</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#testimonial">Testimonial</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footerBottom">
+                <div class="footerBottomIcon">
+                    <div class="heroSecButton">
+                        <div class="iconButton">
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-facebook-fill"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-youtube"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-linkedin"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-dribbble"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-github-original"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    © 2024 All Rights Reserved by
+                    <a
+                        target="_blank"
+                        href="https://www.facebook.com/BugAndErrors"
+                        >Abdullah Al Arafat</a
+                    >
+                </p>
             </div>
         </section>
 
