--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
             <div class="sectionTopHeading">
                 <h1>My Quality Services</h1>
                 <p>
-                    We put your ideas and thus your wishes in the form of a
-                    unique web project that inspires you and you customers.
+                    I can transform your ideas and wishes into stunning
+                    experiences that captivate you and your customers.
                 </p>
             </div>
 
@@ -195,9 +195,9 @@
                     </div>
                     <div class="serviceInfo">
                         <p>
-                            I specialize in crafting user experiences that
-                            prioritize both usability and integrity, fostering
-                            trust at scale.
+                            I offer branding design that builds a strategic
+                            identity, creates a memorable logo, and ensures
+                            consistency across all platforms
                         </p>
                     </div>
                     <div class="serviceLink">
@@ -213,9 +213,9 @@
                     </div>
                     <div class="serviceInfo">
                         <p>
-                            I specialize in crafting user experiences that
-                            prioritize both usability and integrity, fostering
-                            trust at scale.
+                            I offer UI/UX Design to extend your branding across
+                            digital touchpoints, creating a consistent brand
+                            experience for your users
                         </p>
                     </div>
                     <div class="serviceLink">
@@ -231,9 +231,9 @@
                     </div>
                     <div class="serviceInfo">
                         <p>
-                            I specialize in crafting user experiences that
-                            prioritize both usability and integrity, fostering
-                            trust at scale.
+                            I offer web design & development that reinforces
+                            your branding design, creating a cohesive user
+                            experience that reflects your brand values
                         </p>
                     </div>
                     <div class="serviceLink">
@@ -249,9 +249,9 @@
                     </div>
                     <div class="serviceInfo">
                         <p>
-                            I specialize in crafting user experiences that
-                            prioritize both usability and integrity, fostering
-                            trust at scale.
+                            I create a seamless brand journey, from strategic
+                            branding design to a beautifully designed and
+                            developed app
                         </p>
                     </div>
                     <div class="serviceLink">
@@ -366,24 +366,24 @@
                 </div>
                 <div class="expTiles">
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2023 - Present</h3>
+                        <h2>LEAD PROGRAMMER</h2>
+                        <p>SDITC, Dhaka</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2021 - 2023</h3>
+                        <h2>GRAPHICS DESIGNER</h2>
+                        <p>SDITC, Dhaka</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2020 - 2022</h3>
+                        <h2>WEB DEVELOPER</h2>
+                        <p>TMC Club, Dhaka</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2018 - 2020</h3>
+                        <h2>WEB DEVELOPER</h2>
+                        <p>C4C Club, Sylhet</p>
                     </div>
                 </div>
             </div>
@@ -398,24 +398,24 @@
                 </div>
                 <div class="expTiles">
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2023 - Present</h3>
+                        <h2>MBBS</h2>
+                        <p>SBMC, Barishal</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2021 - 2023</h3>
+                        <h2>HSC</h2>
+                        <p>BAFSD, Dhaka</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2019 - 2021</h3>
+                        <h2>SSC & GRAPHICS DESIGNING</h2>
+                        <p>BAFSK, Dhaka</p>
                     </div>
                     <div class="singleTile">
-                        <h3>2022 - Present</h3>
-                        <h2>LEAD DEVELOPER</h2>
-                        <p>Blockdots, London</p>
+                        <h3>2018 - 2019</h3>
+                        <h2>PROGRAMMING COURSE</h2>
+                        <p>Dhaka</p>
                     </div>
                 </div>
             </div>
@@ -424,10 +424,7 @@
         <section id="skills">
             <div class="sectionTopHeading">
                 <h1>My Skills</h1>
-                <p>
-                    We put your ideas and thus your wishes in the form of a
-                    unique web project that inspires you and you customers.
-                </p>
+                <p>I bring my enthusiasm and skills to every project.</p>
             </div>
 
             <div class="skillCards">
@@ -498,8 +495,8 @@
             <div class="sectionTopHeading">
                 <h1>My Client's Stories</h1>
                 <p>
-                    Empowering people in new a digital journey with my super
-                    services
+                    Empowering people in a new digital journey with innovative
+                    solutions
                 </p>
             </div>
             <div class="testimonialCards">
